@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	6.29 (gritter) 3/21/06";
+	"@(#)/usr/ucb/otfdump.sl	6.30 (gritter) 3/22/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  6.29 (gritter) 3/21/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 6.29 (gritter) 3/21/06";
+static const char sccsid[] USED = "@(#)dpost.sl  6.30 (gritter) 3/22/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 6.30 (gritter) 3/22/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.29 (gritter) 3/21/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.30 (gritter) 3/22/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.29 (gritter) 3/21/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.30 (gritter) 3/22/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "6.29";
+const char revision[] = "6.30";
 /* SLIST */
 /*
 calloc.c: * Sccsid @(#)calloc.c	1.3 (gritter) 8/26/05
@@ -37,7 +37,7 @@ nii.c: * Sccsid @(#)nii.c	1.24 (gritter) 2/19/06
 suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
 tdef.h: * Sccsid @(#)tdef.h	1.68 (gritter) 2/19/06
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.22 (gritter) 2/5/06
-nroff.d/n6.c: * Sccsid @(#)n6.c	1.30 (gritter) 3/13/06
+nroff.d/n6.c: * Sccsid @(#)n6.c	1.31 (gritter) 3/22/06
 nroff.d/proto.h: * Sccsid @(#)proto.h	1.31 (gritter) 3/13/06
 nroff.d/tw.h: * Sccsid @(#)tw.h	1.5 (gritter) 9/8/05
 troff.d/afm.c: * Sccsid @(#)afm.c	1.53 (gritter) 3/20/06
@@ -49,7 +49,7 @@ troff.d/otf.c: * Sccsid @(#)otf.c	1.52 (gritter) 3/17/06
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.15 (gritter) 3/16/06
 troff.d/proto.h: * Sccsid @(#)proto.h	1.39 (gritter) 3/13/06
 troff.d/t10.c: * Sccsid @(#)t10.c	1.64 (gritter) 3/13/06
-troff.d/t6.c: * Sccsid @(#)t6.c	1.129 (gritter) 3/14/06
+troff.d/t6.c: * Sccsid @(#)t6.c	1.130 (gritter) 3/22/06
 troff.d/troff.h: * Sccsid @(#)troff.h	1.21 (gritter) 2/5/06
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.13 (gritter) 2/16/06
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.2 (gritter) 12/22/05
