@@ -1,3 +1,8 @@
+Release ...
+* troff: No longer prints a warning when a font selected with ".fp" is
+  not currently mounted but can be mounted in position 0.
+* nroff: No longer prints a warning when a font is selected with ".fp".
+
 Release 060321
 * An revised version of the "Nroff/Troff User's Manual" is now available
   in the directory "doc/troff". It replaces the "NEWS" and "PDFS" text
